--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon dist/backend.js",
-    "build": "webpack"
+    "build-server": "webpack --config-name server",
+    "build-client": "webpack --config-name client",
+    "dev": "webpack serve --open"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +25,9 @@
     "mongoose": "^5.12.4",
     "nodemon": "^2.0.7",
     "path-browserify": "^1.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "util": "^0.12.3",
@@ -33,8 +38,11 @@
     "@babel/core": "^7.13.16",
     "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^5.3.1",
     "webpack": "^5.34.0",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
