--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon dist/backend.js",
+    "server": "nodemon server/public/backend.js",
+    "client": "webpack --watch --config-name client",
     "build-server": "webpack --config-name server",
     "build-client": "webpack --config-name client",
-    "dev": "webpack serve --open"
+    "dev": "concurrently \"npm:client\" \"npm:server\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@babel/runtime": "^7.13.16",
+    "app-root-path": "^3.0.0",
     "assert": "^2.0.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
