--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"npm run client\" \"npm run server\"",
+    "start": "concurrently \"npm run client\" \"npm run server\" \"sudo service nginx start\"",
     "client": "webpack serve --open",
     "server": "nodemon --exec npm run babel-node -- server/src/app.js",
     "babel-node": "babel-node --presets='@babel/preset-env' --ignore='node_modules'"
