--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"npm run client\" \"npm run server\" \"sudo service nginx start\"",
+    "start": "concurrently \"npm run client\" \"npm run server\" && sudo service nginx start",
     "client": "webpack serve --open",
     "server": "nodemon --exec npm run babel-node -- server/src/app.js",
     "babel-node": "babel-node --presets='@babel/preset-env' --ignore='node_modules'"
@@ -46,10 +46,12 @@
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.4",
     "html-webpack-plugin": "^5.3.1",
+    "sass": "^1.32.12",
+    "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "svg-url-loader": "^7.1.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.34.0",
+    "webpack": "^5.36.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   }
