Added delete button.

--- a/package.json
+++ b/package.json
@@ -45,10 +45,13 @@
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^8.1.1",
     "css-loader": "^5.2.4",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "react-svg-loader": "^3.0.3",
     "sass": "^1.32.12",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "svg-inline-loader": "^0.8.2",
     "svg-url-loader": "^7.1.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.36.2",
