--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"npm run client\" \"npm run server\" && sudo service nginx start",
-    "client": "webpack serve --open",
+    "client": "webpack serve --open --config webpack.dev.js",
     "server": "nodemon --exec npm run babel-node -- server/src/app.js",
-    "babel-node": "babel-node --presets='@babel/preset-env' --ignore='node_modules'"
+    "babel-node": "babel-node --presets='@babel/preset-env' --ignore='node_modules'",
+    "build": "webpack --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
@@ -56,6 +57,7 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   }
 }
