--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
     "assert": "^2.0.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "chokidar": "^3.5.1",
     "concurrently": "^6.0.2",
     "crypto-browserify": "^3.12.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
+    "install": "^0.13.0",
     "mongodb": "^3.6.6",
     "mongoose": "^5.12.4",
     "nodemon": "^2.0.7",
+    "npm": "^7.17.0",
     "path-browserify": "^1.0.1",
     "react": "^17.0.2",
+    "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "stream-browserify": "^3.0.0",
