--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "assert": "^2.0.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
+    "bulma": "^0.9.2",
     "chokidar": "^3.5.1",
     "concurrently": "^6.0.2",
     "crypto-browserify": "^3.12.0",
@@ -35,6 +36,7 @@
     "npm": "^7.17.0",
     "path-browserify": "^1.0.1",
     "react": "^17.0.2",
+    "react-bulma-components": "^4.0.7",
     "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
