--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chokidar": "^3.5.1",
     "concurrently": "^6.0.2",
     "crypto-browserify": "^3.12.0",
+    "date-fns": "^2.22.1",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
