--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^17.0.2",
     "react-bulma-components": "^4.0.7",
     "react-calendar": "^3.4.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "stream-browserify": "^3.0.0",
